objects/OF_ContrattoServizio__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Competence__c</fullName>
        <label>Billing Competence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anticipato</fullName>
                </value>
                <value>
                    <fullName>Posticipato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Servizi sottoscritti</relationshipLabel>
        <relationshipName>Contratti_Servizi</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Servizio</label>
        <referenceTo>OF_Servizio__c</referenceTo>
        <relationshipLabel>Servizi sottoscritti</relationshipLabel>
        <relationshipName>Contratti_Servizi</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServizioName__c</fullName>
        <label>ServizioName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open Stream</fullName>
                </value>
                <value>
                    <fullName>GPON Passiva</fullName>
                </value>
                <value>
                    <fullName>Open Internet</fullName>
                </value>
                <value>
                    <fullName>Fiber Link</fullName>
                </value>
                <value>
                    <fullName>P2P Base</fullName>
                </value>
                <value>
                    <fullName>Backhauling</fullName>
                </value>
                <value>
                    <fullName>PREPROVISIONING</fullName>
                </value>
                <value>
                    <fullName>P2P Attiva</fullName>
                </value>
                <value>
                    <fullName>Fiber Lease</fullName>
                </value>
                <value>
                    <fullName>BTS</fullName>
                </value>
                <value>
                    <fullName>Dark Fiber</fullName>
                </value>
                <value>
                    <fullName>Circuiti Diretti</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isBonifica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBonifica</label>
        <type>Checkbox</type>
    </fields>
    <label>Servizio sottoscritto</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Contratto Servizio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servizi sottoscritti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>